--- a/src/app/pages/home/components/home-admin/home-admin.component.html
+++ b/src/app/pages/home/components/home-admin/home-admin.component.html
@@ -1,12 +1,12 @@
 
-<h6 style="margin-top: 1.8rem;">Los viajes de hoy</h6>
+<h4 style="margin-top: 1.8rem;">Los viajes de hoy</h4>
 <cwc-grid class="demo-grid">
   <cwc-cell mobile-colspan="6">
-    <cwc-card design-version="v2">
+    <cwc-card design-version="v1">
         <div class="main-content-card">
             <div class="content-header">
                 <span>6</span>
-                <h6>Pre-turno</h6>
+                <h4>Pre-turno</h4>
             </div>
             <hr/>
             <div class="content-body-trip">
@@ -33,11 +33,11 @@
   </cwc-cell>
 
   <cwc-cell mobile-colspan="6">
-    <cwc-card design-version="v2">
+    <cwc-card design-version="v1">
         <div class="main-content-card">
             <div class="content-header">
                 <span>12</span>
-                <h6>En turno</h6>
+                <h4>En turno</h4>
             </div>
             <hr/>
             <div class="content-body-trip">
@@ -67,49 +67,49 @@
   </cwc-cell>
 </cwc-grid>
 
-<cwc-card style="margin-top: 1rem;" design-version="v2">
+<cwc-card style="margin-top: 1rem;" design-version="v1">
   <div style="padding: 0.8rem">
       <div class="content-request">
           <div class="content-info-request">
             <span class="style-text">2</span>
-            <span>Empresas</span>
+            <span>Viajes programados</span>
           </div>
-          <cwc-button variant="link">Ver más</cwc-button>
+          <cwc-button (click)="onClickMyTravel()" variant="link">Ver más</cwc-button>
       </div>
       <hr color="#D0D0D0"/>
       <div class="content-request">
         <div class="content-info-request">
             <span class="style-text">2</span>
-            <span>Empresas</span>
+            <span>Viajes terminados</span>
         </div>
-        <cwc-button variant="link">Ver más</cwc-button>
+        <cwc-button (click)="onClickMyTravel()" variant="link">Ver más</cwc-button>
       </div>
       <hr color="#D0D0D0"/>
       <div class="content-request">
         <div class="content-info-request">
             <span class="style-text">2</span>
-            <span>Empresas</span>
+            <span>Citas pendientes</span>
         </div>
-        <cwc-button variant="link">Ver más</cwc-button>
+        <cwc-button (click)="onClickMyTravel()" variant="link">Ver más</cwc-button>
       </div>
   </div>
 </cwc-card>
 
-<h6 style="margin-top: 1.5rem;">Buscar viaje</h6>
-<cwc-card style="margin-top: 1rem;" design-version="v2">
+<h4 style="margin-top: 1.5rem;">Buscar viaje</h4>
+<cwc-card style="margin-top: 1rem;" design-version="v1">
   <div class="card-content">
-   <h6 style="text-align: center;">Buscar viaje</h6>
+   <h4 style="text-align: center;">Buscar viaje</h4>
    <p style="text-align: center; font-size: 15px;">Revisa entre nuestros distintos departamentos disponibles un viaje que se ajueste a tu ruta y horario.</p>
   </div>
 </cwc-card>
 
-<cwc-button  style="margin-top: 1rem;" variant="regular-block">
+<cwc-button  style="margin-top: 1rem;" variant="regular-block" (click)="onClickTravel()">
   <div class="button-css">BUSCAR VIAJE</div>
 </cwc-button>
 
-<cwc-card style="margin-top: 1rem;" design-version="v2">
+<cwc-card style="margin-top: 1rem;" design-version="v1">
   <div class="card-content">
-   <h6 style="text-align: center;">Accede a tu cuenta Clever</h6>
+   <h4 style="text-align: center;">Accede a tu cuenta Clever</h4>
    <p style="text-align: center; font-size: small;">Revisa tus datos y manten tu perfil actualizado para un mejor seguimiento</p>
    <div>
     <cwc-button class="button-css" variant="regular-block" (click)="onUrl(linkClever)">
@@ -119,9 +119,9 @@
   </div>
 </cwc-card>
 
-<cwc-card style="margin-top: 1rem;" design-version="v2">
+<cwc-card style="margin-top: 1rem;" design-version="v1">
   <div class="card-content">
-   <h6 style="text-align: center;">Tu viaje CEMEX</h6>
+   <h4 style="text-align: center;">Tu viaje CEMEX</h4>
    <p style="text-align: center; font-size: small;">Verifica el estado de tus viajes y actualizaciones de los mismos</p>
    <div>
     <cwc-button class="button-css" variant="regular-block" (click)="onUrl(linkTrip)">
