--- a/src/app/pages/home/components/home-admin/home-admin.component.scss
+++ b/src/app/pages/home/components/home-admin/home-admin.component.scss
@@ -20,6 +20,11 @@ span.style-text {
     border-radius: 5px;
 }
 
+.main-content-card{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
 
 
 .content-header {
