--- a/src/app/pages/my-travels/components/previous-trips-list/previous-trips-list.component.scss
+++ b/src/app/pages/my-travels/components/previous-trips-list/previous-trips-list.component.scss
@@ -25,6 +25,7 @@
 }
 span.style-name {
     font-weight: 700;
+    color: #3FA9F5;
 }
 .content-status {
     display: flex;
@@ -120,5 +121,6 @@ span.text-btn {
 
 .detail_list_travels{
     font-weight: 900;
-    font-size: small;
+    font-size: 15px;
+    color: #002A59;
 }
