--- a/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
+++ b/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
@@ -1,26 +1,28 @@
 <app-layout class="card-size">
-  <cwc-tabs>
-    <cwc-tab [active]="selectedTab == 'anteriores'" name='anteriores' (click)="changeTab('anteriores')">Anteriores</cwc-tab>
-    <cwc-tab [active]="selectedTab == 'programados'" name='programados' (click)="changeTab('programados')">Programados</cwc-tab>
-    <cwc-tab [active]="selectedTab == 'solicitudes'" name='solicitudes' (click)="changeTab('solicitudes')">Solicitudes</cwc-tab>
+  <cwc-tabs variant="heading">
+    <cwc-tab [active]="selectedTab == 'anteriores'" name='anteriores' (click)="changeTab('anteriores')">ANTERIORES</cwc-tab>
+    <cwc-tab [active]="selectedTab == 'programados'" name='programados' (click)="changeTab('programados')">PROGRAMADOS</cwc-tab>
+    <cwc-tab [active]="selectedTab == 'solicitudes'" name='solicitudes' (click)="changeTab('solicitudes')">SOLICITUDES</cwc-tab>
   </cwc-tabs>
-  <cwc-grid class="demo-grid" row-gap="2px">
-    <cwc-cell mobile-colspan="11" style="padding-top: 0.8rem;">     
-      <div>
-        <cwc-input design-version="v2" class="search-text" variant="regular" rtl="false" trailing-icon='magnifier-glass' placeholder='Buscar...'></cwc-input>  
-      </div>       
-    </cwc-cell> 
-    <cwc-cell mobile-colspan="1">    
-      <div class="icon">
-        <cwc-button variant="link">          
-          <cwc-icon variant="link" name='controls' size="20px" aria-role="button"></cwc-icon>
-        </cwc-button>
-      </div>  
-    </cwc-cell>    
-  </cwc-grid>  
-  <div [ngSwitch]="selectedTab" class="navbar" style="padding-top: 0.8rem;">
-    <app-previous-trips-list *ngSwitchCase="'anteriores'" [tripsList]="previousTripsList" [sizeList]="sizePrevious"></app-previous-trips-list>
-    <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="scheduledTripsList" [sizeList]="sizeScheduled"></app-scheduled-trips-list>
-    <app-request-travel-list *ngSwitchCase="'solicitudes'" [tripsList]="requestTripsList" [sizeList]="sizePrevious"></app-request-travel-list>
+  <div class="content-page">
+    <cwc-grid class="demo-grid" row-gap="2px">
+      <cwc-cell mobile-colspan="11" style="padding-top: 0.8rem;">
+        <div>
+          <cwc-input design-version="v2" class="search-text" variant="regular" rtl="false" trailing-icon='magnifier-glass' placeholder='Buscar...'></cwc-input>  
+        </div>       
+      </cwc-cell> 
+      <cwc-cell mobile-colspan="1">    
+        <div class="icon">
+          <cwc-button variant="link">          
+            <cwc-icon variant="link" name='controls' size="20px" aria-role="button"></cwc-icon>
+          </cwc-button>
+        </div>  
+      </cwc-cell>    
+    </cwc-grid>  
+    <div [ngSwitch]="selectedTab" class="navbar" style="padding-top: 0.8rem;">
+      <app-previous-trips-list *ngSwitchCase="'anteriores'" [tripsList]="previousTripsList" [sizeList]="sizePrevious"></app-previous-trips-list>
+      <app-scheduled-trips-list *ngSwitchCase="'programados'" [tripsList]="scheduledTripsList" [sizeList]="sizeScheduled"></app-scheduled-trips-list>
+      <app-request-travel-list *ngSwitchCase="'solicitudes'" [tripsList]="requestTripsList" [sizeList]="sizePrevious"></app-request-travel-list>
+    </div>
   </div>
 </app-layout>
