--- a/src/app/pages/vehicles/vehicles.page.html
+++ b/src/app/pages/vehicles/vehicles.page.html
@@ -1,26 +1,28 @@
 <app-layout class="card-size">
-  <cwc-grid class="demo-grid" row-gap="2px">
-    <cwc-cell colspan="12" mobile-colspan="11" style="padding-bottom: 0;">     
-      <div>
-        <cwc-input class="search-text" variant="regular" rtl="false" trailing-icon='magnifier-glass' placeholder='Buscar...'></cwc-input>  
-      </div>       
-    </cwc-cell> 
-    <cwc-cell colspan="12" mobile-colspan="1">    
-      <div class="icon">
-        <cwc-button variant="link">          
-          <cwc-icon variant="link" name='controls' size="20px" aria-role="button"></cwc-icon>
-        </cwc-button>
+  <div class="content-page">
+    <cwc-grid class="demo-grid" row-gap="2px">
+      <cwc-cell colspan="12" mobile-colspan="11" style="padding-bottom: 0;">     
+        <div>
+          <cwc-input class="search-text" variant="regular" rtl="false" trailing-icon='magnifier-glass' placeholder='Buscar...'></cwc-input>  
+        </div>       
+      </cwc-cell> 
+      <cwc-cell colspan="12" mobile-colspan="1">    
+        <div class="icon">
+          <cwc-button variant="link">          
+            <cwc-icon variant="link" name='controls' size="20px" aria-role="button"></cwc-icon>
+          </cwc-button>
+        </div>  
+      </cwc-cell>    
+    </cwc-grid>  
+    <h6 class="text-vehicles">Vehículos ({{vehiclesList.length}})</h6>
+    <ion-content>
+      <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
+      <div class="navbar">
+        <app-vehicle-list [vehicles]="vehiclesList" [companyName]="company"></app-vehicle-list>
       </div>  
-    </cwc-cell>    
-  </cwc-grid>  
-  <h6 class="text-vehicles">Vehículos ({{vehiclesList.length}})</h6>
-  <ion-content>
-    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-      <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
-    <div class="navbar">
-      <app-vehicle-list [vehicles]="vehiclesList" [companyName]="company"></app-vehicle-list>
-    </div>  
-  </ion-content>  
-  <cwc-button class="float" routerLink="agregar" design-version="v2" size="large" variant="ghost" ratio="square" trailing-icon="plus"></cwc-button>
+    </ion-content>  
+    <cwc-button class="float" routerLink="agregar" design-version="v2" size="large" variant="ghost" ratio="square" trailing-icon="plus"></cwc-button>
+  </div>  
 </app-layout>
