--- a/src/app/pages/waiting-list/waiting-list.page.html
+++ b/src/app/pages/waiting-list/waiting-list.page.html
@@ -1,20 +1,22 @@
 <app-layout class="card-size">
-  <cwc-grid class="demo-grid" style="padding-top: 1rem;">
-    <cwc-cell colspan="6" mobile-colspan="9">
-      <div>Semana 22 de Agosto, 2020</div>
-    </cwc-cell>
-    <cwc-cell colspan="6" mobile-colspan="3">
-      <div style="text-align: end;">{{requestsList.length}} Viajes</div>
-    </cwc-cell>
-  </cwc-grid>
-  <ion-content>   
-    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-      <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
-    <div class="navbar" style="padding-top: 0.5rem;">
-      <app-request-waiting-list [requests]="requestsList"></app-request-waiting-list>
-    </div>
-  </ion-content>
-  <cwc-button class="float" routerLink="new-request" design-version="v2" size="large" variant="ghost" ratio="square" trailing-icon="plus"></cwc-button>
+  <div class="content-page">
+    <cwc-grid class="demo-grid" style="padding-top: 1rem;">
+      <cwc-cell colspan="6" mobile-colspan="9">
+        <div>Semana 22 de Agosto, 2020</div>
+      </cwc-cell>
+      <cwc-cell colspan="6" mobile-colspan="3">
+        <div style="text-align: end;">{{requestsList.length}} Viajes</div>
+      </cwc-cell>
+    </cwc-grid>
+    <ion-content>   
+      <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
+      <div class="navbar" style="padding-top: 0.5rem;">
+        <app-request-waiting-list [requests]="requestsList"></app-request-waiting-list>
+      </div>
+    </ion-content>
+    <cwc-button class="float" routerLink="new-request" design-version="v2" size="large" variant="ghost" ratio="square" trailing-icon="plus"></cwc-button>
+  </div>  
 </app-layout>
  
