--- a/src/app/pages/register/components/photo-indentity-card/photo-indentity-card.component.html
+++ b/src/app/pages/register/components/photo-indentity-card/photo-indentity-card.component.html
@@ -1,4 +1,4 @@
-<cwc-modal id='modal-photo-licence-driver' [open] ="modalPhotoIdentityCardShow" class="modal-cemex" (cwcClose)="closeModalIdentityCard()">
+<cwc-modal id='modal-photo-licence-driver' class="modal-cemex" (cwcClose)="closeModalIdentityCard()">
   <header slot='header'>
       <h2 style='margin:0;'>Agregar cédula de ciudadanía (Opcional)</h2>
   </header>
