--- a/src/app/pages/waiting-list/new-request/components/request-drive-new/request-drive-new.component.html
+++ b/src/app/pages/waiting-list/new-request/components/request-drive-new/request-drive-new.component.html
@@ -3,9 +3,9 @@
     <cwc-grid class="demo-grid" design-version="v2" row-gap="5px" columns="12" mobile-columns="12" style="margin-top: 1rem;">
         <cwc-cell colspan="12" mobile-colspan="12">
           <cwc-input
-            formControlName="Origen"
             [status]="getStatusField('Origen')"
             [statusMessage]="getMsgField('Origen', 'origen')"
+            id="input-origin"
             style="width: 100%;"
             label='Origen (Municipio)'
             design-version="v2">
@@ -13,9 +13,9 @@
           </cwc-cell>
         <cwc-cell colspan="12" mobile-colspan="12">
           <cwc-input
-            formControlName="Destino"
             [status]="getStatusField('Destino')"
             [statusMessage]="getMsgField('Destino', 'destino')"
+            id="input-destiny"
             style="width: 100%;"
             label='Destino (Municipio)'
             design-version="v2">
@@ -24,9 +24,11 @@
         <cwc-cell class="flex flex__align--bullseye" mobile-colspan="12">          
           <div style="text-align: center; padding-bottom: 1rem; font-weight: 900;" >Rango de Hora</div>
         </cwc-cell>
-        <cwc-cell mobile-colspan="6" class="flex flex__align--center">
+        <cwc-cell mobile-colspan="12" class="flex flex__align--center">
           <cwc-input-time
+            style="width: 100%;"
             formControlName="TimerStar"
+            format="12h"
             label='Hora (Inicio)'
             [status]="getStatusField('TimerStar')"
             [statusMessage]="getMsgField('TimerStar', 'tiempo de inicio')"
@@ -34,10 +36,10 @@
             placeholder="--:--"
             design-version="v2">
           </cwc-input-time>
-        </cwc-cell>
-        <cwc-cell mobile-colspan="6" class="flex flex__align--center">
           <cwc-input-time
+            style="width: 100%;"
             formControlName="TimerEnd"
+            format="12h"
             label='Hora (Inicio)'
             [status]="getStatusField('TimerEnd')"
             [statusMessage]="getMsgField('TimerEnd', 'tiempo final')"
@@ -51,9 +53,6 @@
         </cwc-cell>
         <cwc-cell colspan="12" mobile-colspan="12">
           <cwc-input-date
-            return-format="date"
-            hover-range="multiple-week"
-            formControlName="DateTravels"
             [status]="getStatusField('DateTravels')"
             (cwcChange)="changeDateTime($event)"
             style="width: 100%;"
@@ -68,7 +67,11 @@
             (cwcClick)="searchTrips()"
             [disabled]="form.invalid"
             design-version="v1"
-            variant="regular-block">ENVIAR SOLICITUD</cwc-button>
+            variant="regular-block">
+            <div class="button-css">
+              ENVIAR SOLICITUD
+            </div>
+            </cwc-button>
           </div>
         </cwc-cell>        
     </cwc-grid> 
