--- a/src/app/pages/register/components/register-admin-logist-third/register-admin-logist-third.component.html
+++ b/src/app/pages/register/components/register-admin-logist-third/register-admin-logist-third.component.html
@@ -1,216 +1,231 @@
 <form (submit)="register()" [formGroup]="form">
-  <div style="display: flex;">
-    <label for="" style="font-size: 0.9rem; margin-bottom: 0.7rem;">Selecciona la empresa
-      <cwc-tooltip content='Busca y selecciona la empresa o microempresa'>
-        <cwc-icon style="margin-left: 0.5rem;" id='icon' name='information-rounded-fill' color="bright-blue" size='24px'></cwc-icon>
-      </cwc-tooltip>
-    </label>
-  </div>
-    <cwc-select
-    [status]='statusInputConveyor'
-    design-version="v2"
-    [statusMessage]='statusInputMessageConveyor' (cwcChange)="cwcChange($event)" class="w-full select-filter" unwrap="true" label="" filter-no-resultsMessage="No se encontraron resultados" filter-placeholder="Filtrar Empresas" placeholder="Seleccionar" filter>
-      <cwc-select-option *ngFor="let companies of listCompanies" [value]="companies.id">{{companies.companyName}}</cwc-select-option>
-    </cwc-select>
-  <cwc-grid class="demo-grid" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 3rem;">
+  <cwc-picker (cwcChange)="cwcChange($event)" class="w-full select-filter" label='Empresa'
+    filter-no-resultsMessage="No se encontraron resultados" filter-placeholder="Filtrar Empresas"
+    placeholder="Seleccionar" design-version="v2" filter>
+    <ng-container *ngFor="let companies of listCompanies">
+      <option [value]="companies.id">{{companies.companyName}}</option>
+    </ng-container>
+  </cwc-picker>
+  <cwc-grid class="demo-grid" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 1.5rem;">
     <cwc-cell colspan="12" mobile-colspan="12">
       <div class="section">
-        <cwc-input class="input" 
-                   label='Nombre (s)'
-                   [status]='statusInputName'
-                   [statusMessage]='statusInputMessageName'
-                   design-version="v2" 
-                   formControlName="FirstName"
-                   ngDefaultControl
-                   required
-        ></cwc-input>
+        <cwc-input class="input" label='Nombre (s)' [status]="msgField.getStatusField(form, 'FirstName')"
+          [statusMessage]="msgField.getFirstNameFieldMsg(form, 'FirstName', 'nombre(s)')" maxlength="45"
+          placeholder="Escribe tu Nombre" design-version="v2" formControlName="FirstName" required></cwc-input>
       </div>
       <div class="section">
-        <cwc-input class="input" 
-                   label='Apellido (s)'
-                   [status]='statusInputLastName'
-                   [statusMessage]='statusInputMessageLastName'
-                   formControlName="LastName"
-                   design-version="v2" 
-                   ngDefaultControl
-                   required
-        ></cwc-input>
+        <cwc-input class="input" label='Apellido (s)' [status]="msgField.getStatusField(form, 'LastName')"
+          [statusMessage]="msgField.getLastNameFieldMsg(form, 'LastName', 'apellido(s)')" maxlength="45"
+          placeholder="Apellido paterno y materno" formControlName="LastName" design-version="v2" required></cwc-input>
       </div>
       <div class="section">
-        <cwc-input class="input" 
-        label='Correo electrónico'
-        [status]='statusInputEmail'
-        [statusMessage]='statusInputMessageEmail'
-        formControlName="Email"
-        ngDefaultControl
-        design-version="v2" 
-        required
-        ></cwc-input>
+        <cwc-input class="input" label='Correo electrónico' [status]="msgField.getStatusField(form, 'Email')"
+          [statusMessage]="msgField.getEmailFieldMsg(form, 'Email', 'correo electrónico')" formControlName="Email"
+          placeholder="Agrega tu correo electrónico" design-version="v2" required></cwc-input>
       </div>
       <div class="section">
-        <cwc-input class="input" 
-        label='Número de celular'
-        type="number"
-        [status]='statusInputPhone'
-        [statusMessage]='statusInputMessagePhone'
-        formControlName="PhoneNumber"
-        design-version="v2"
-        ngDefaultControl
-        required
-        ></cwc-input>
+        <cwc-input class="input" label='Número de celular' type="number"
+          [status]="msgField.getStatusField(form, 'PhoneNumber')"
+          [statusMessage]="msgField.getPhoneNumberFieldMsg(form, 'PhoneNumber', 'número de celular')"
+          placeholder="Agrega un número de telefono" formControlName="PhoneNumber" design-version="v2" required>
+        </cwc-input>
       </div>
       <div class="section">
-        <cwc-input class="input" 
-        label='Contraseña'
-        [status]='statusInputNit'
-        [statusMessage]='statusInputMessageNit'
-        type="password"
-        formControlName="Password"
-        design-version="v2" 
-        ngDefaultControl
-        required
-        ></cwc-input>
+        <cwc-input class="input" label='Contraseña' [status]="msgField.getStatusField(form, 'Password')"
+          [statusMessage]="msgField.getPasswordFieldMsg(form, 'Password', 'contraseña')" type="password"
+          placeholder="Contraseña" formControlName="Password" design-version="v2" allow-password-show='true' required>
+        </cwc-input>
       </div>
     </cwc-cell>
   </cwc-grid>
-   <!--=====================================
-      DOCUMENTO DE LA EMPRESA
-    ======================================-->
-    <label for="">Licencia de conducir (opcional)</label>
-<div>
-  <cwc-grid class="demo-grid content-archive" >
-    <cwc-cell (click)="openModalPhotoDocumentCompany()" class="border" colspan="6" mobile-colspan="6" style="cursor: pointer;">
-      <div class="item-archives">
-        <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
-        <h5 class="text-archive">Tomar fotografía</h5>
-      </div>
-    </cwc-cell>
-    <cwc-cell colspan="6" mobile-colspan="6" style="cursor: pointer;">
-      <div class="item-archives">
-        <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
-        <h5 class="text-archive">Seleccionar archivo</h5>
-      </div>
-    </cwc-cell>
-</cwc-grid>
-</div>
-  <div *ngIf="addDocumentCompany">
-    <cwc-grid class="demo-grid content-archive" >
-      <cwc-cell (click)="openModalPhotoDocumentCompany()" class="" colspan="12" mobile-colspan="12">
+  <label for="">Licencia de conducción (opcional)</label>
+  <div *ngIf="!fileRegister.fileDrivinglicense">
+    <cwc-grid class="demo-grid content-archive" column-gap="1px">
+      <input type="file" accept="image/*,.pdf" #getFileDrivinglicense style="display: none;"
+        (change)="data = fileRegister.onFileDrivinglicense($event, data)" />
+      <cwc-cell (click)="openModalDocument('Drivinglicense')" class="border" mobile-colspan="6">
         <div class="item-archives">
-          <cwc-icon name="attachment" size="28px" color="bright-blue"></cwc-icon>
-          <h5 class="text-archive">Documento agregado</h5>
-          <cwc-icon (click)="removeDocumentCompany()" name="close" size="20px" color="bright-blue" style="margin-left: 1rem; cursor: pointer;"></cwc-icon>
+          <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
+          <div class="text-archive">Tomar fotografía</div>
+        </div>
+      </cwc-cell>
+      <cwc-cell mobile-colspan="6" alignItems="center">
+        <div class="item-archives" (click)="getFileDrivinglicense.click()">
+          <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
+          <div class="text-archive">Seleccionar archivo</div>
         </div>
       </cwc-cell>
     </cwc-grid>
   </div>
-   <!--=====================================
-      CEDULA DE CIUDADANIA
-    ======================================-->
-<label for="">Tarjeta de seguridad (opcional)</label>
-<div>
-  <cwc-grid class="demo-grid content-archive" >
-    <cwc-cell (click)="openModalPhotoIdentityCard()" class="border" colspan="6" mobile-colspan="6" style="cursor: pointer;">
-      <div class="item-archives">
-        <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
-        <h5 class="text-archive">Tomar fotografía</h5>
-      </div>
-    </cwc-cell>
-    <cwc-cell colspan="6" mobile-colspan="6" style="cursor: pointer;">
-      <div class="item-archives">
-        <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
-        <h5 class="text-archive">Seleccionar archivo</h5>
-      </div>
-    </cwc-cell>
-</cwc-grid>
-</div>
-  <div *ngIf="addIdentityCard">
-    <cwc-grid class="demo-grid content-archive" >
-      <cwc-cell (click)="openModalPhotoIdentityCard()" class="" colspan="12" mobile-colspan="12">
+  <div *ngIf="fileRegister.fileDrivinglicense">
+    <cwc-grid class="demo-grid content-archive flex">
+      <cwc-cell mobile-colspan="11">
         <div class="item-archives">
           <cwc-icon name="attachment" size="28px" color="bright-blue"></cwc-icon>
-          <h5 class="text-archive">Cédula de Ciudadanía agregada </h5>
-          <cwc-icon (click)="removeIdentityCard()" name="close" size="20px" color="bright-blue" style="margin-left: 1rem; cursor: pointer;"></cwc-icon>
+          <div class="text-archive">{{fileRegister.fileDrivinglicense}}</div>
         </div>
+      </cwc-cell>
+      <cwc-cell mobile-colspan="1" class="flex">
+        <cwc-icon style="display: flex; align-items: center; padding-top: 5px; padding-right: 1rem;"
+          (click)="data = fileRegister.deleteFileDrivinglicense(data)" name="close" size="20px" color="bright-blue">
+        </cwc-icon>
+      </cwc-cell>
+    </cwc-grid>
+  </div>
+  <!--=====================================
+      CEDULA DE CIUDADANIA
+    ======================================-->
+  <label for="">Carné de seguridad industrial y vial (opcional)</label>
+  <div *ngIf="!fileRegister.fileSecurityCard">
+    <cwc-grid class="demo-grid content-archive" column-gap="1px">
+      <input type="file" accept="image/*,.pdf" #getFileSecurityCard style="display: none;"
+        (change)="data = fileRegister.onFileSecurityCard($event, data)" />
+      <cwc-cell (click)="openModalDocument('SecurityCard')" class="border" colspan="6" mobile-colspan="6">
+        <div class="item-archives">
+          <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
+          <div class="text-archive">Tomar fotografía</div>
+        </div>
+      </cwc-cell>
+      <cwc-cell colspan="6" mobile-colspan="6">
+        <div class="item-archives" (click)="getFileSecurityCard.click()">
+          <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
+          <div class="text-archive">Seleccionar archivo</div>
+        </div>
+      </cwc-cell>
+    </cwc-grid>
+  </div>
+  <div *ngIf="fileRegister.fileSecurityCard">
+    <cwc-grid class="demo-grid content-archive flex">
+      <cwc-cell mobile-colspan="11">
+        <div class="item-archives">
+          <cwc-icon name="attachment" size="28px" color="bright-blue"></cwc-icon>
+          <div class="text-archive">{{fileRegister.fileSecurityCard}}</div>
+        </div>
+      </cwc-cell>
+      <cwc-cell mobile-colspan="1" class="flex">
+        <cwc-icon style="display: flex; align-items: center; padding-top: 5px; padding-right: 1rem;"
+          (click)="data = fileRegister.deleteFileSecurityCard(data)" name="close" size="20px" color="bright-blue">
+        </cwc-icon>
       </cwc-cell>
     </cwc-grid>
   </div>
 
-<label for="">Cédula de ciudadanía (opcional)</label>
-<div>
-  <cwc-grid class="demo-grid content-archive" >
-    <cwc-cell (click)="openModalPhotoIdentityCard()" class="border" colspan="6" mobile-colspan="6" style="cursor: pointer;">
-      <div class="item-archives">
-        <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
-        <h5 class="text-archive">Tomar fotografía</h5>
-      </div>
-    </cwc-cell>
-    <cwc-cell colspan="6" mobile-colspan="6" style="cursor: pointer;">
-      <div class="item-archives">
-        <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
-        <h5 class="text-archive">Seleccionar archivo</h5>
-      </div>
-    </cwc-cell>
-</cwc-grid>
-</div>
-  <div *ngIf="addIdentityCard">
-    <cwc-grid class="demo-grid content-archive" >
-      <cwc-cell (click)="openModalPhotoIdentityCard()" class="" colspan="12" mobile-colspan="12">
+  <label for="">Cédula de ciudadanía (opcional)</label>
+  <div *ngIf="!fileRegister.fileDocument">
+    <cwc-grid class="demo-grid content-archive" column-gap="1px">
+      <input type="file" accept="image/*,.pdf" #getFileDocument style="display: none;"
+        (change)="data = fileRegister.onFileDocument($event, data)" />
+      <cwc-cell (click)="openModalDocument('DocumentIdentityCard')" class="border" colspan="6" mobile-colspan="6">
         <div class="item-archives">
-          <cwc-icon name="attachment" size="28px" color="bright-blue"></cwc-icon>
-          <h5 class="text-archive">Cédula de Ciudadanía agregada </h5>
-          <cwc-icon (click)="removeIdentityCard()" name="close" size="20px" color="bright-blue" style="margin-left: 1rem; cursor: pointer;"></cwc-icon>
+          <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
+          <div class="text-archive">Tomar fotografía</div>
+        </div>
+      </cwc-cell>
+      <cwc-cell colspan="6" mobile-colspan="6">
+        <div class="item-archives" (click)="getFileDocument.click()">
+          <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
+          <div class="text-archive">Seleccionar archivo</div>
         </div>
       </cwc-cell>
     </cwc-grid>
   </div>
-    
-    <app-error-messages [errors]="errors"></app-error-messages> 
+  <div *ngIf="fileRegister.fileDocument">
+    <cwc-grid class="demo-grid content-archive flex">
+      <cwc-cell mobile-colspan="11">
+        <div class="item-archives">
+          <cwc-icon name="attachment" size="28px" color="bright-blue"></cwc-icon>
+          <div class="text-archive">{{fileRegister.fileDocument}}</div>
+        </div>
+      </cwc-cell>
+      <cwc-cell mobile-colspan="1" class="flex">
+        <cwc-icon style="display: flex; align-items: center; padding-top: 5px; padding-right: 1rem;"
+          (click)="data = fileRegister.deleteFileDocument(data)" name="close" size="20px" color="bright-blue">
+        </cwc-icon>
+      </cwc-cell>
+    </cwc-grid>
+  </div>
+
+  <app-error-messages [errors]="errors"></app-error-messages>
   <!--=====================================
     BOTON PARA GUARDAR EL REGISTRO
   ======================================-->
-    <div class="content-button">
-      <cwc-button 
-      design-version="v1" 
-      [disabled]="form.invalid"
-      (click)="openAlertConfirm()" 
-      variant="regular-block">COMPLETAR REGISTRO</cwc-button>
-    </div>
+  <div class="content-button">
+    <cwc-button design-version="v1" [disabled]="form.invalid" (click)="openAlertConfirm()" variant="regular-block">
+      <div class="button-css">COMPLETAR REGISTRO</div>
+    </cwc-button>
+  </div>
 </form>
 
-<app-photo-indentity-card
-[modalPhotoIdentityCardShow] = "openPhotoIdentityCard"
-></app-photo-indentity-card>
-<app-document-company
-[modalPhotoDocumentCompanyShow] = "openPhotoDocumentCompany"
-></app-document-company>
+<cwc-modal id='modal-document' class="modal-cemex" closeOnBdClick="false" (cwcClose)="cloceModalDocument()">
+  <header slot='header'>
+    <h2 style='margin:0;'>Agregar {{nameText}} (Opcional)</h2>
+  </header>
+  <cwc-grid class="demo-grid" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 2rem;"
+    style="margin-bottom: 2rem">
+    <cwc-cell colspan="6" mobile-colspan="12" style="cursor: pointer; margin-top: 1rem;">
+      <label for="">1. Parte frontal del documento.</label>
+      <div class="contend-upload-camera" (click)="fileRegister.openCameraOne()">
+
+        <ion-img class="img-photo-register" *ngIf="fileRegister.photoFrontal" [src]="fileRegister.photoFrontal" style="object-fit: cover;
+          max-height: 175px !important;"></ion-img>
+
+        <cwc-icon *ngIf="!fileRegister.photoFrontal" name="camera" color="bright-blue" size="30px"
+          style="margin-right: 1rem;"></cwc-icon>
+        <p *ngIf="!fileRegister.photoFrontal">Abrir cámara del dispositivo</p>
+
+      </div>
+      <cwc-button (click)="fileRegister.removePhotoFrontal()" *ngIf="fileRegister.photoFrontal" variant="link"
+        class="m-h-reg remove-photo-archive">Quitar Foto</cwc-button>
+    </cwc-cell>
+    <cwc-cell colspan="6" mobile-colspan="12" style="cursor: pointer; margin-top: 1rem;">
+      <label for="">2. Parte trasera del documento.</label>
+      <div class="contend-upload-camera" (click)="fileRegister.openCameraTwo()">
+
+        <ion-img class="img-photo-register" *ngIf="fileRegister.photoBack" [src]="fileRegister.photoBack" style="object-fit: cover;
+        max-height: 175px !important;"></ion-img>
+
+        <cwc-icon *ngIf="!fileRegister.photoBack" name="camera" color="bright-blue" size="30px"
+          style="margin-right: 1rem;"></cwc-icon>
+        <p *ngIf="!fileRegister.photoBack">Abrir cámara del dispositivo</p>
+
+      </div>
+      <cwc-button (click)="fileRegister.removePhotoBack()" *ngIf="fileRegister.photoBack" variant="link"
+        class="m-h-reg remove-photo-archive">Quitar Foto</cwc-button>
+    </cwc-cell>
+  </cwc-grid>
+  <footer slot='footer'>
+    <div style='text-align: center'>
+      <cwc-button variant='support' design-version="v2" (click)="cloceModalDocument()" style="margin-right: 1rem;">
+        Cancelar</cwc-button>
+      <cwc-button design-version="v2" *ngIf="fileRegister.photoBack && fileRegister.photoFrontal" variant='primary'
+        (click)="savePdf()">Aceptar</cwc-button>
+    </div>
+  </footer>
+</cwc-modal>
+
 <!--=====================================
 		MODAL ALERTA CONFIRMAR DATOS GUARDAR
 ======================================-->
-<cwc-modal id='alert-confirm' class="alert-confirm" [open] ="alertConfirm" (cwcClose)="closeAlertConfirm()">
+<cwc-modal id='alert-confirm' class="alert-confirm" [open]="alertConfirm" (cwcClose)="closeAlertConfirm()">
   <header slot='header'>
-      <h2 style='margin:0;'>Atención</h2>
+    <h2 style='margin:0;'>Atención</h2>
   </header>
   <p>¿Esta seguro que los datos registrados estan correctos?</p>
   <footer slot='footer'>
-      <div style='text-align: end'>
-        <cwc-button variant='support' (click)="closeAlertConfirm()" style="margin-right: 1rem;">Cancelar</cwc-button>
-          <cwc-button variant='primary' (click)="register()" >Aceptar</cwc-button>
-      </div>
+    <div style='text-align: end'>
+      <cwc-button variant='support' (click)="closeAlertConfirm()" style="margin-right: 1rem;">Cancelar</cwc-button>
+      <cwc-button variant='primary' (click)="register()">Aceptar</cwc-button>
+    </div>
   </footer>
 </cwc-modal>
 <!--=====================================
 		MODAL CONFIRMACIÓN RESPUESTA DE EXITO
 ======================================-->
-<app-alert-success
-[alertShow] = "alertSucces"
-title = "Existoso"
-urlButton = "/login"
-textButton = "Volver al login"
-message = "El registro se realizó correctamente, vamos a validar sus datos y pronto daremos respuesta.">
+<app-alert-success [alertShow]="alertSucces" title="Existoso" urlButton="/login" textButton="Volver al login"
+  message="El registro se realizó correctamente, vamos a validar sus datos y pronto daremos respuesta.">
 </app-alert-success>
 <!--=====================================
 	TOAST ALERT MENSAJE
 ======================================-->
-<cwc-snackbar id='toast-message-driver' [message]="toastMessage"
-cta-message="dismiss" auto-hide-duration='5000'></cwc-snackbar>
+<cwc-snackbar id='toast-message-driver' [message]="toastMessage" cta-message="dismiss" auto-hide-duration='5000'>
+</cwc-snackbar>
