--- a/src/app/pages/profile/edit/edit-admin-logis-third/edit-admin-logis-third.component.html
+++ b/src/app/pages/profile/edit/edit-admin-logis-third/edit-admin-logis-third.component.html
@@ -1,4 +1,4 @@
-<form (submit)="register()" [formGroup]="form">
+<form [formGroup]="form">
   <cwc-grid class="demo-grid" design-version="v2" columns="12" mobile-columns="12" style="margin-top: 2rem;">
     <cwc-cell colspan="12" mobile-colspan="12">
       <div class="section">
