--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -78,7 +78,7 @@
           </cwc-grid>
           <cwc-grid>
             <cwc-cell mobile-colspan="12" class="cell-button">        
-              <cwc-button (click)="updateDocumentsUser()" variant="link" class="m-h-reg link-cwc">ACTUALIZAR DOCUMENTOS</cwc-button>
+              <cwc-button variant="link" class="m-h-reg link-cwc">ACTUALIZAR DOCUMENTOS</cwc-button>
               </cwc-cell>
           </cwc-grid>
         </div>
